--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-icons/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-lists/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-navigations/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css'
+@import '../node_modules/@syncfusion/ej2-richtexteditor/styles/material.css'
+
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+
+.width100
+    width: 100%!important
+.floatR
+    float: right!important
+.width50
+    width: 50%!important
